# dtlx

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
cmake/: fetched-libs.cmake
docs/: Doxygen
example/: CMakeLists.txt
examples/: CMakeLists.txt
examples/cmake/: fetched-libs.cmake
examples/source/: benchdiff.cpp  common.hpp  filediff.cpp  intdiff.cpp  objdiff.cpp  pretty_print.cpp  strdiff.cpp
examples/source/new/: common_modern.hpp  intdiff_modern.cpp  strdiff_modern.cpp
include/dtl-modern/: common.hpp  constants.hpp  dtl-modern.hpp  lcs.hpp  ses.hpp
include/dtl-modern/detail/: diff.hpp
include/dtl-modern/extra/: ses_display_simple.hpp
include/dtl_modern/: common.hpp  concepts.hpp  constants.hpp  dtl_modern.hpp  lcs.hpp  ses.hpp
include/dtl_modern/detail/: diff.hpp  merge.hpp  patch.hpp  unidiff.hpp
include/dtl_modern/extra/: ses_display_pretty.hpp  ses_display_simple.hpp  uni_hunk_display_simple.hpp
include/dtlx/: common.hpp  concepts.hpp  constants.hpp  dtlx.hpp  lcs.hpp  ses.hpp
include/dtlx/detail/: diff.hpp  merge.hpp  patch.hpp  unidiff.hpp
include/dtlx/extra/: ses_display_pretty.hpp  ses_display_simple.hpp  uni_hunk_display_simple.hpp
test/: CMakeLists.txt  conanfile.py
test/source/: filediff_test.cpp  formatter.hpp  helper.hpp  intdiff_test.cpp  objdiff_test.cpp  strdiff_test.cpp  strmerge_test.cpp  strpatch_test.cpp
test/source/new/: formatter.hpp  helper.hpp  intdiff_test.cpp
